# property_models

./: .clang-format  .clang-tidy  .cmake-format  CMakeLists.txt  CMakePresets.json  README.md  build.sh  format.sh
example/: CMakeLists.txt  main.cpp
include/property_models/: model.h  temp.h
include/property_models/internal/: constraint.impl.h  csm.h  fwd.h  macros.impl.h  property.impl.h  property_model.impl.h
include/property_models/internal/solver/: solver.h
src/: temp.cpp
src/solver/: CMakeLists.txt  combined.cpp  combined.h  maximum_matching.cpp  maximum_matching.h  quick_plan.cpp  quick_plan.h  solver.cpp  solver.h
tests/: CMakeLists.txt  temp.cpp
tests/solver/: CMakeLists.txt  maximum_matching.cpp  quick_plan.cpp
